[project]
name = "pdf-toolkit"
version = "0.1.0"
description = "PDF processing toolkit for text extraction, table extraction, merging, splitting, OCR, and form filling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "pypdf>=6.5.0",
    "pypdfium2>=5.2.0",
    "pytesseract>=0.3.13",
    "reportlab>=4.4.7",
]
